# truncatedBinomialDistribution

./: .gitignore  CMakeLists.txt
TruncatedBinomialDistribution/: CMakeLists.txt  TruncatedBinomialDistribution.cpp  TruncatedBinomialDistribution.h  includeMPFR.h  includeMPFRTruncatedBinomial.h  serializeGMP.hpp  serializeGMPTruncatedBiniomal.hpp
TruncatedBinomialTest/: CMakeLists.txt  main.cpp
